# ChangeLog for dev-libs/hyphen
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/hyphen/ChangeLog,v 1.29 2012/12/17 15:24:39 scarabeus Exp $

  17 Dec 2012; Tomáš Chvátal <scarabeus@gentoo.org> -hyphen-2.8.5.ebuild:
  Remove older.

  08 Dec 2012; Markus Meier <maekke@gentoo.org> hyphen-2.8.6.ebuild:
  add ~arm, bug #440908

  07 Nov 2012; Jeroen Roovers <jer@gentoo.org> hyphen-2.8.6.ebuild:
  Stable for HPPA (bug #441186).

  03 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org> hyphen-2.8.6.ebuild:
  Stable on amd64 x86 ppc and ppc64 wrt bug#441186.

*hyphen-2.8.6 (25 Sep 2012)

  25 Sep 2012; Tomáš Chvátal <scarabeus@gentoo.org> +hyphen-2.8.6.ebuild,
  -hyphen-2.8.4.ebuild:
  Version bump to latest.

  18 Sep 2012; Jeroen Roovers <jer@gentoo.org> hyphen-2.8.5.ebuild:
  Stable for HPPA (bug #433221).

  03 Sep 2012; Tomáš Chvátal <scarabeus@gentoo.org> hyphen-2.8.5.ebuild:
  Stable on amd64 x86 ppc and ppc64. Wrt bug#433221.

*hyphen-2.8.5 (18 Jul 2012)

  18 Jul 2012; Tomáš Chvátal <scarabeus@gentoo.org> +hyphen-2.8.5.ebuild:
  Version bump to latest.

  18 Jul 2012; Tomáš Chvátal <scarabeus@gentoo.org> -hyphen-2.8.3.ebuild,
  hyphen-2.8.4.ebuild:
  Stabilise 2.8.4 on all arches, remove older.

*hyphen-2.8.4 (02 Jul 2012)

  02 Jul 2012; Tomáš Chvátal <scarabeus@gentoo.org> +hyphen-2.8.4.ebuild,
  metadata.xml:
  Version bump to latest.

  01 May 2012; Jeroen Roovers <jer@gentoo.org> hyphen-2.8.3.ebuild:
  Stable for HPPA too.

  25 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org> -hyphen-2.7.1.ebuild,
  hyphen-2.8.3.ebuild:
  PPC stable wrt bug#411449.

  06 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org> -hyphen-2.4.ebuild:
  Drop old.

  26 Mar 2012; Brent Baude <ranger@gentoo.org> hyphen-2.8.3.ebuild:
  Marking hyphen-2.8.3 ppc64 for bug 398521

  16 Jan 2012; Agostino Sarubbo <ago@gentoo.org> hyphen-2.8.3.ebuild:
  Stable for amd64, wrt bug #398521
