@@ -2,23 +2,25 @@
 Hash: SHA256
 
 DIST hyphen-2.8.6.tar.gz 636800 SHA256 155cc1be5f406a4f3e55cd5154dd30353652f4da6cff0f600be4f1f67c127208 SHA512 37ca403af59b1e5b254dff69bdf46f933818385517bbd93c3f9b3c177a05408d971b14d2e4b98922a0c274e490a1e23fc468a12984a2802f42c5e67fc0f9ad34 WHIRLPOOL a4a2a40e94925a96af89b70ea980f399eab90dfb640a11aa04617ee5d3a41026c59f2120473fc69b72c0a678590f53979b2e3773474b4c4506a5f104609aa5bf
+DIST hyphen-2.8.8.tar.gz 638369 SHA256 304636d4eccd81a14b6914d07b84c79ebb815288c76fe027b9ebff6ff24d5705 SHA512 ee514952be56869840b70fb74f60eba14dc4de246733ff8705492367e8cf00c485f8778a9d5a7ba374c988d4ac9fedbe75826dc559e1b62465dbfba21f6ce7de WHIRLPOOL a864236d9182e5c336a0d37f1740b698754900422bc034199cb9be628bdb141072edd24a220388c2e995e82e032709fdd5e61377c36322523e9d7591c656f0e1
 EBUILD hyphen-2.8.6.ebuild 746 SHA256 71a30d2a25bccad19c742532a8a25b4d32d34cf8da13bf52647ecbead0919164 SHA512 4f07949f42081af8762e804d3c63794f509d38c11cb01ebbab27dfedfcb45c1ab019ad0fd799bb680230c9406a9f6e53234181cdfe7e7009053e6fecb0b938ca WHIRLPOOL 540d654a06758f5ade4ad1e6d95e6e01077169f524475bb7a2d863f3d033f8f77e5279a74bd25f7d36028695d87db8033d615b5cb5fffd9c0035fd2c25b1962f
-MISC ChangeLog 3608 SHA256 5b45db162df7f545cc9c39f76b403c11e90348c7763788d20832c3d85428a74c SHA512 95cc0aaeb6dd3624f65b44e6fe8f168deb099dbd91e63a49796cff3f770a465315eb3a5433e10b8fed80c05b557d8325475ecd0c7712b55362c487151d4e3a0c WHIRLPOOL e9e6b009d75548b6ca3586349d8fa7748bb17d40db1bb955fac376f3a961277534d4e29357d58ed89bdf1374162604d79acdde00f3ed73b67f64f42e5826b3c5
+EBUILD hyphen-2.8.8.ebuild 754 SHA256 95a1bb91b1d6677dbfe48c2241da0ce43bffa51ba9dcf8be76837366f406a97e SHA512 12a4f4a7a9e0d581fea5d594380549f267f17fb9b73ac95d2e3ed06ae8254f12af9065b658c51ec5d92a4809ad4ca0fcfcccc7c706a800b9a1a9b17afbe6c83c WHIRLPOOL 5f89500eb53cf1fb9a28b616b2078fc96de20470ec493c99ce49de74d88cf29ac6e5a0d0ec9a35ace628eaa9ab0347e968e45090ffdea785a15f77764229456b
+MISC ChangeLog 3744 SHA256 385863b291658a355a19a26af27658bf0cc1e57ec563472ef917ac3c146000f9 SHA512 d27b43304917be9221dc01c3321d7c523f9110a278a2af79968119d75993cc51030ec784b4d6983ea0c19a63d230e24f7ac17ae17d3078b9d4ed4111b883a3f3 WHIRLPOOL 31fc8510ded08cd51336f37bb4cab533178f0f215a2a24b1cb48d1669b7dc59a0ad3adbd9a35ca193d76454c567969e36e49f2622032787079e6aab30825c75a
 MISC metadata.xml 164 SHA256 6dd077e0a4bddf8cac0a6d7fb01d5f992a81c85d77d55787d19c6d4ae4c5aeeb SHA512 acd8ec5158c34fd738af175dda4c270a884c80e76dd10d9252e2513846ae1cb69ed8b1afe328a69ced10974ca3c60366394990b98a0d9b9815527f262afd9937 WHIRLPOOL 43b43d99d3c96c6da7006df219d57a4ff853353940dbd597bbbd2be00af7b38f0e6c3e33024b1e964ef1fedb12f788ea78693b7e3527011d8bbb9757ec0b88a2
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBCAAGBQJQzzkaAAoJEOSiRoyO7jvoi4QP/RxO2vg5qjjf/6xThgFcqiBy
-hqXYooiN2qC7GMA8sB63Zq7H7r/XN4Siz8ZceDGZUtZ+P5JY5YWicLqmr/s9IX/A
-QFkTaOT5Rib1Ywpcmy/yQ4sNy3Wxr5anV05pmmCe3pxR8x+9Rpxu2KgzjCIAisSd
-A+IxE5ExzrhEP0f/UhYGvXa30pfE9pY29NvFVUmW7njZnGjyYZmmGiKSSwginjXD
-RUTgsgqxtBev3uNsa0pzFvd1el+JGzu3s42njAKbyD+28+oXIyDahoFuGEtRh0HS
-Aq/jTET3XxyK6E4iIu6455grrWAbcBab2Hr3b8TZoGygpmDKLYFTLDwUeyYFWofb
-hIKBoS8MVBJpPBPTW7dR4lz7/OUafhY0P7H0ctUgTKhCs88/eYJzKzY/gbw8Xt8s
-ce+yZSTgoXkkwwmjlBPcupvnTK7+cazerhyA0UiRsohcyA1baLFnjYubVvJUxitq
-amS+CjlwfHZ97upn3EaNdhHgkvNPdrmyvx8aMBEr2cRbX1N8SlHM5576ax/gZ5hV
-YdZWLz5CSzK6l9mhfuCl27yAEA6Avu370iN22cAvdlGOiBd2Dgy0ypkCW9YF+WLf
-w6y5h05VteSTJUF/o2klxxhVFXWsU48Fj3paMo1BCB1wB83vaH96zsNUzAGJYQ6r
-tihFcX6n67ZV3DOwSlgU
-=Xvre
+iQIcBAEBCAAGBQJUnyjJAAoJEJS/30SErRQv1ZcP/2oQp8qLNS97/sXg7Wr20+Yv
+nP5SKFLv1EZtfEN2Mol0QFmcyIf4F9IBaXYLZoUSZ6Qjtz7odRZ/tiSsS20mcVLD
+x26wvTVTV8AqDbByY1/6jMRgXMepCbe2a+YLC3iv0nSTG3GudiLidu7J2BYzMaRm
+/kEXFg6qJN5fyD5lGgXR+dMqKOFpI6AS6pbdPxYRjuVkzEt2u8p/+bFNxuhgEpbl
+nDY5BOnKyl5FzAj1H1pu9LcxjXehE3yrfEZ2gq807GWHlUv+AxbgdxlwD9V75j/r
+VuvcfbBTiXgxkq1LNGNq0AxLB0yheYS772jEyGaL5o2yKAEfOIyBqw91jS4z8pY0
+A22S8f4jAnTF3CmGcN6r7W16D3cmmI0XY0lyxVfPN2llpvRgn0BEQ9CX6YQuj15d
+3mSdh0ipqmzgS6/Smv9+KfTZGcF0apwm008FBM0gq+3IW7tFrRestPM4bR3g1BB1
+piT3PhhsAQkUVcDOMCodyi/k+UyTLjcKuPgP8o2xExlbQpbYptllp69nuVKdkg7n
+t6GPZvXzK9yQ8HRusVqBufM6izDlcCLoYEvMY9Y1UflcMBfsLlMP7WC2hK8im7E3
+qz0fsTYW3nYCpsEuSMdgX/wUIORhjTbKw0X46TKOhrNTgiVj1WTaCt1f+yW/yYQS
+dTI5su5IOUumOcBXcb9X
+=pkCo
 -----END PGP SIGNATURE-----
