@@ -1,0 +1,12 @@
+DEFINED_PHASES=configure install
+DEPEND=app-text/hunspell
+DESCRIPTION=ALTLinux hyphenation library
+EAPI=4
+HOMEPAGE=http://hunspell.sf.net
+IUSE=static-libs
+KEYWORDS=~amd64 ~arm ~hppa ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~x86-linux
+LICENSE=GPL-2 LGPL-2.1 MPL-1.1
+RDEPEND=app-text/hunspell
+SLOT=0
+SRC_URI=mirror://sourceforge/hunspell/hyphen-2.8.8.tar.gz
+_md5_=e17a291525838b8503f235c691c18b57
